--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             background: #fff;
         }
 
+        .hidden { display: none; }
+        
+        .tooltipblock { position: absolute; z-index: 1000; background-color: #fff; color: #333; padding: 15px;max-width: 300px;
+            box-shadow: 0px 0px 7px #CCCCCC; -webkit-box-shadow: 0px 0px 7px #CCCCCC; -moz-box-shadow: 0px 0px 7px #CCCCCC; }
+            .tooltipblock p{margin-bottom: 0px;}
+            .tooltipblock hr {margin-top: 5px;margin-bottom: 5px;}
+
         
     </style>
 </head>
