Corrected missing Mouseout feature

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="static/charts/create-map.js"></script>
     <script>
-        var state_settings = {
+        const state_settings = {
             htmlElement: ".state-map",
             constituencies: "All",
             margin: { top: 50, left: 50, right: 50, bottom: 50 },
