--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             height: auto;
             margin: 0 auto;
             background: #fff;
+            float:left;
+        }
+        .infobox{
+            width: 300px;
+            height:auto;
+            background: #fff;
+            float: left;
         }
 
         .hidden { display: none; }
@@ -26,6 +33,9 @@
 </head>
 <body>
     <div class="chart state-map"></div>
+    <div class="infobox">
+        <h2 id="state-name"></h2>
+    </div>
     <script src="http://www.thehindu.com/static/js/jquery-1.10.2.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
