--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             background: #fff;
          }
 
-         .yAxis path {display:none;}
+         .yAxis path, .yAxis .tick line {display:none;}
          .yAxis .tick text {font-size: 16px;}
       </style>
    </head>
@@ -106,7 +106,7 @@
                      <span>2,37,89,234</span>
                   </div>
                   <div id="gender-count">
-                     <svg viewBox="0 0 650 400" preserveAspectRatio="xMinYMin"></svg>
+                     <svg viewBox="0 0 650 200" preserveAspectRatio="xMinYMin"></svg>
                   </div>
                   <div class="religious-voteshare">
                      Pie Chart
@@ -180,7 +180,7 @@
 
          const india_gender_count = findIndiaData[0]['Gender_Count']
          
-         drawPartyPos("#party-positions", india_party_pos, {
+         drawBarchart("#party-positions", india_party_pos, {
             width: 650,
             height: 400,
             margin: { top: 20, right: 20, bottom: 50, left: 80 },
@@ -188,9 +188,9 @@
             yAxisLabel: "Votes",
          });
 
-         drawPartyPos("#gender-count", india_gender_count, {
+         drawBarchart("#gender-count", india_gender_count, {
             width: 650,
-            height: 400,
+            height: 200,
             margin: { top: 20, right: 20, bottom: 50, left: 80 },
             xAxisLabel: "Gendername",
             yAxisLabel: "votercount",
