--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>General Elections Visualization</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="http://www.thehindu.com/static/theme/default/base/css/theme.min.css" />
+      <link rel="stylesheet" href="https://www.thehindu.com/static/theme/default/base/css/theme.min.css" />
       <style>
          * {
          box-sizing: border-box;
@@ -125,7 +125,7 @@
          </div>
          <div style="clear: both;"></div>
          </div> -->
-        <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script> 
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> 
       <script src="https://d3js.org/d3.v4.min.js"></script>
       <script src="https://d3js.org/topojson.v2.min.js"></script>
       <script src="static/charts/create-map.js"></script>
